Bug 663687 - Make the folder text visible when dropping something on it.  r=Standard8.

--- a/mail/themes/qute/mail/mailWindow1-aero.css
+++ b/mail/themes/qute/mail/mailWindow1-aero.css
@@ -152,6 +152,11 @@ padding: 4px 0px;
     border-bottom: none;
     border-left: none;
   }
+
+  #folderTree treechildren::-moz-tree-cell-text(dropOn) {
+    color: -moz-FieldText;
+  }
+
 }
 
 @media all and (-moz-windows-compositor) {
